--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -2,6 +2,50 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "8607238c",
+      "metadata": {},
+      "source": [
+        "# VAE+ANS SDK Tutorial – Installation & Setup\n",
+        "\n",
+        "## Installation\n",
+        "\n",
+        "To use this notebook, you must install the local `vaerans_ecs` package in editable mode:\n",
+        "\n",
+        "```bash\n",
+        "# From the repository root directory:\n",
+        "pip install -e \".[dev]\"\n",
+        "```\n",
+        "\n",
+        "This installs the package with development dependencies (pytest, mypy, black, ruff, hypothesis).\n",
+        "\n",
+        "If you only need core runtime dependencies (without dev tools):\n",
+        "```bash\n",
+        "pip install -e .\n",
+        "```\n",
+        "\n",
+        "## Configuration\n",
+        "\n",
+        "Create `vaerans_ecs.toml` in the repository root (copy from `vaerans_ecs.toml.example`):\n",
+        "```bash\n",
+        "cp vaerans_ecs.toml.example vaerans_ecs.toml\n",
+        "```\n",
+        "\n",
+        "Update the paths in `vaerans_ecs.toml` to point to your ONNX model files:\n",
+        "- `models.sdxl-vae.encoder` → path to VAE encoder ONNX\n",
+        "- `models.sdxl-vae.decoder` → path to VAE decoder ONNX\n",
+        "\n",
+        "Alternatively, set the `VAERANS_CONFIG` environment variable to point to your config file.\n",
+        "\n",
+        "## Optional Dependencies\n",
+        "\n",
+        "For image display and visualization:\n",
+        "```bash\n",
+        "pip install pillow matplotlib\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "# VAE+ANS SDK Tutorial\n",
