Skapades med Colab

--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -68,74 +68,85 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ebe675f",
-        "outputId": "832f5f33-3013-4492-8235-82f5d65b49ba"
+        "outputId": "722f16bd-7394-401d-9e86-0374eeeeefa0"
       },
       "source": [
         "import sys\n",
         "import os\n",
         "from pathlib import Path\n",
+        "\n",
         "# Detect if running on Google Colab\n",
         "IN_COLAB = 'google.colab' in sys.modules\n",
         "\n",
         "if IN_COLAB:\n",
-        "    print(\"Running on Google Colab - Setting up environment...\\n\")\n",
+        "  print(\"Running on Google Colab - Setting up environment...\\n\")\n",
         "\n",
-        "    # Clone repository\n",
-        "    repo_url = \"https://github.com/mdahlgrengadd/vaerans_ecs_design_artifact.git\"\n",
-        "    repo_name = \"vaerans_ecs_design_artifact\"\n",
+        "  # Clone repository\n",
+        "  repo_url = \"https://github.com/mdahlgrengadd/vaerans_ecs_design_artifact.git\" # Fixed URL\n",
+        "  repo_name = \"vaerans_ecs_design_artifact\"\n",
+        "  repo_path = Path(repo_name)\n",
         "\n",
-        "    if not Path(repo_name).exists():\n",
-        "        print(f\"Cloning repository from {repo_url}\")\n",
-        "        !git clone {repo_url}\n",
+        "  if not repo_path.exists():\n",
+        "    print(f\"Cloning repository from {repo_url}\")\n",
+        "    # Use GIT_TERMINAL_PROMPT=0 to prevent interactive username prompts\n",
+        "    # This error (fatal: could not read Username for 'https://github.com')\n",
+        "    # often means git tried to ask for credentials in a non-interactive shell.\n",
+        "    !GIT_TERMINAL_PROMPT=0 git clone {repo_url}\n",
+        "\n",
+        "    # Check again if the repository was successfully cloned and directory created\n",
+        "    if not repo_path.exists():\n",
+        "        print(f\"ERROR: Cloning failed and '{repo_name}' directory was not created. Please check the repository URL or your network connection.\")\n",
+        "        # If cloning failed, we cannot proceed, so raise an error.\n",
+        "        raise FileNotFoundError(f\"Cloning failed: '{repo_name}' directory not found after clone attempt.\")\n",
+        "  else:\n",
+        "    print(f\"Repository already cloned: {repo_name}\")\n",
+        "\n",
+        "  # Change to repo directory\n",
+        "  os.chdir(repo_name)\n",
+        "  print(f\"Changed directory to: {os.getcwd()}\")\n",
+        "\n",
+        "  # Check for GPU availability\n",
+        "  print(\"\\nChecking for GPU...\")\n",
+        "  try:\n",
+        "    import subprocess\n",
+        "    result = subprocess.run(['nvidia-smi'], capture_output=True, timeout=5)\n",
+        "    gpu_available = result.returncode == 0\n",
+        "  except:\n",
+        "    gpu_available = False\n",
+        "\n",
+        "  if gpu_available:\n",
+        "    print(\"[GPU] GPU detected! Installing GPU-accelerated packages...\")\n",
+        "    print(\"      This will enable 10-30x faster VAE operations\")\n",
+        "    # Install GPU version\n",
+        "    !pip uninstall -q -y onnxruntime 2>/dev/null || true\n",
+        "    !pip install -q onnxruntime-gpu\n",
+        "  else:\n",
+        "    print(\"[CPU] No GPU detected. Using CPU version (still works fine!)\")\n",
+        "    !pip install -q onnxruntime\n",
+        "\n",
+        "  # Install package with dependencies\n",
+        "  print(\"\\nInstalling vaerans_ecs package...\")\n",
+        "  !pip install -q -e . pillow matplotlib\n",
+        "\n",
+        "  print(\"\\n[OK] Installation complete!\")\n",
+        "\n",
+        "  # Verify which provider is available\n",
+        "  try:\n",
+        "    import onnxruntime as ort\n",
+        "    providers = ort.get_available_providers()\n",
+        "    if 'CUDAExecutionProvider' in providers:\n",
+        "      print(\"[OK] CUDA provider available - VAE will run on GPU!\")\n",
         "    else:\n",
-        "        print(f\"Repository already cloned: {repo_name}\")\n",
-        "\n",
-        "    # Change to repo directory\n",
-        "    os.chdir(repo_name)\n",
-        "    print(f\"Changed directory to: {os.getcwd()}\")\n",
-        "\n",
-        "    # Check for GPU availability\n",
-        "    print(\"\\nChecking for GPU...\")\n",
-        "    try:\n",
-        "        import subprocess\n",
-        "        result = subprocess.run(['nvidia-smi'], capture_output=True, timeout=5)\n",
-        "        gpu_available = result.returncode == 0\n",
-        "    except:\n",
-        "        gpu_available = False\n",
-        "\n",
-        "    if gpu_available:\n",
-        "        print(\"[GPU] GPU detected! Installing GPU-accelerated packages...\")\n",
-        "        print(\"      This will enable 10-30x faster VAE operations\")\n",
-        "        # Install GPU version\n",
-        "        !pip uninstall -q -y onnxruntime 2>/dev/null || true\n",
-        "        !pip install -q onnxruntime-gpu\n",
-        "    else:\n",
-        "        print(\"[CPU] No GPU detected. Using CPU version (still works fine!\")\n",
-        "        !pip install -q onnxruntime\n",
-        "\n",
-        "    # Install package with dependencies\n",
-        "    print(\"\\nInstalling vaerans_ecs package...\")\n",
-        "    !pip install -q -e . pillow matplotlib\n",
-        "\n",
-        "    print(\"\\n[OK] Installation complete!\")\n",
-        "\n",
-        "    # Verify which provider is available\n",
-        "    try:\n",
-        "        import onnxruntime as ort\n",
-        "        providers = ort.get_available_providers()\n",
-        "        if 'CUDAExecutionProvider' in providers:\n",
-        "            print(\"[OK] CUDA provider available - VAE will run on GPU!\")\n",
-        "        else:\n",
-        "            print(\"[INFO] Using CPU provider\")\n",
-        "    except:\n",
-        "        pass\n",
+        "      print(\"[INFO] Using CPU provider\")\n",
+        "  except:\n",
+        "    pass\n",
         "\n",
         "else:\n",
-        "    print(\"Running locally\")\n",
-        "    # Assume we're already in the repo or examples directory\n",
-        "    if Path.cwd().name == 'examples':\n",
-        "        os.chdir('..')\n",
-        "    print(f\"Working directory: {os.getcwd()}\")\n",
+        "  print(\"Running locally\")\n",
+        "  # Assume we're already in the repo or examples directory\n",
+        "  if Path.cwd().name == 'examples':\n",
+        "    os.chdir('..')\n",
+        "  print(f\"Working directory: {os.getcwd()}\")\n",
         "\n",
         "print(f\"\\nSetup complete! Python: {sys.version.split()[0]}\")"
       ],
@@ -148,10 +159,10 @@
             "Running on Google Colab - Setting up environment...\n",
             "\n",
             "Repository already cloned: vaerans_ecs_design_artifact\n",
-            "Changed directory to: /content/vaerans_ecs_design_artifact/vaerans_ecs_design_artifact\n",
+            "Changed directory to: /content/vaerans_ecs_design_artifact/vaerans_ecs_design_artifact/vaerans_ecs_design_artifact\n",
             "\n",
             "Checking for GPU...\n",
-            "[CPU] No GPU detected. Using CPU version (still works fine!\n",
+            "[CPU] No GPU detected. Using CPU version (still works fine!)\n",
             "\n",
             "Installing vaerans_ecs package...\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
